comment from python script

--- a/Snub_Dodecahedron_Volumes.ipynb
+++ b/Snub_Dodecahedron_Volumes.ipynb
@@ -1762,8 +1762,7 @@
    "source": [
     "## Numerical\n",
     "\n",
-    "Jupyter notebook [Snub Dodecahedron Volume Calculated Six Ways](https://nbviewer.jupyter.org/url/archimedeansolids.github.io/Snub_Dodecahedron_Six_Ways.ipyb)
-	[<sup>4</sup>](#fn4)\n",
+    "Jupyter notebook [Snub Dodecahedron Volume Calculated Six Ways](https://nbviewer.jupyter.org/url/archive.org/download/snub-six-ways/Snub_Dodecahedron_Volume_Calculated_Six_Ways.ipynb)[<sup>4</sup>](#fn4)\n",
     " is a supplement to this essay. Six Python classes, each calculating the volume of the Snub Dodecahedron in a different way, the five methods above plus a 3D Numerical method. 3D distances drive a numerical root finder. Two triangle objects are defined as adjacent triangles on a regular icosahedron. The algorithm is applied to one point on the plane of each triangle so that the distance of a side of an inscribed snub triangle is equal to the side of a non inscribed snub triangle.\n"
    ]
   },
